@@ -292,6 +292,22 @@
 </tr>
 </table>
 
+<h4>Add POST method for /qos</h4>
+<table class="tchange">
+<tr>
+	<td class="tdfield">new method</td>
+	<td class="tdchange">.paths."/qos/".post</td>
+</tr>
+<tr>
+	<td class="tdfield">new path</td>
+	<td class="tdchange">.components.schemas."dbv0.0.38_response_qos"</td>
+</tr>
+<tr>
+	<td class="tdfield">new path</td>
+	<td class="tdchange">.components.schemas."dbv0.0.38_update_qos"</td>
+</tr>
+</table>
+
 <h3>openapi/dbv0.0.36 (src/plugins/openapi/dbv0.0.36/openapi.json)</h3>
 
 <h4>Deprecation notice</h4>
